[package]
name = "imgur2018"
version = "0.1.1"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "An Imgur upload client for async Rust"
documentation = "https://docs.rs/imgur2018"
readme = "README.md"
homepage = "https://github.com/ewpratten/imgur2018"
repository = "https://github.com/ewpratten/imgur2018"
license = "GPL-3.0"
keywords = ["imgur"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11.10", default-features=false, features = ["json", "rustls-tls"] }
url = "2.2"
thiserror = "1"
serde_json = "1"

[dev-dependencies]
tokio-test = "0.4"
